--- a/style.css
+++ b/style.css
@@ -360,3 +360,9 @@ body {
         transform: rotate(360deg);
     }
 }
+
+@media screen and (max-width: 760px) {
+     .navbar a {
+        
+    }
+}
