--- a/style.css
+++ b/style.css
@@ -361,8 +361,23 @@ body {
     }
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 730px) {
      .navbar a {
-        
+        display: flex;
+     }
+       .home-img {
+        display: flex;
+       } 
+
+
+    .home-content {
+        margin-right: 10%;
     }
+}
+
+@media screen and (max-width: 1260px){
+
+.home-sci {
+       margin-right: 20%; 
+}
 }
